# pyrnalist

./: .bandit.yaml  .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: release_to_pip.yaml
src/pyrnalist/: __init__.py  pyrnalist.py
