[metadata]
name = pyrnalist
version = 0.1.1
author = Andrzej Lichnerowicz
author_email = andrzej@lichnerowicz.pl
description = An elegant console reporter, a python port of Yournalist
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/unjello/pyrnalist
project_urls =
    Bug Tracker = https://github.com/unjello/pyrnalist/issues
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    colorama >= 0.4
    psutil >= 5.8

[options.packages.find]
where = src